# lex2all

./: Dtypes.hs  FilePath.hs  Generic.hs  LexToDyalog.hs  LexToGeni.hs  LexToGeniXML.hs  LexToLLP2.hs  LexToTTMCTAG.hs  MacroProcessing.hs  Main.hs  Makefile  MorphParser.hs  MorphToDyalog.hs  MorphToLLP2.hs  MorphToTTMCTAG.hs  Opts.hs  Parser.hs  PrettyPrinting.hs  README  XMLprint.hs  install.sh  lex2all.cabal
dtds/: dyalog-tag.dtd,xml  genixml.dtd,xml  llp2-tag.dtd,xml
