name:                lex2all
version:             2.1
synopsis:            Converter between various lexicon formats used for NLP
description:         Converter between various lexicon formats used for Natural Language Processing,
                     (both parsing and generation).
                     .
                     The formats include
                     .
                     * DyALog
                     * LLP2
                     * GenI
                     * Tulipa 
                     * XML (what kind?)
category:            Natural Language Processing
license:             OtherLicense 
license-file:        License-en
author:              Yannick Parmentier
maintainer:          <Yannick.Parmentier@loria.fr>
build-Depends:       base < 4
                   , containers > 0.1 && < 0.3
                   , filepath > 1.0   && < 1.2
                   , old-time  > 1.0  && < 1.1
                   , parsec > 2.0     && < 3
                   , utf8-string >= 0.3 && < 0.4

build-Type:          Simple

executable:          lexConverter
main-is:             Main.hs
